// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sxih33v {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sxih33v:focus,
.sxih33v:hover {
  color: var(--sx-colors-tertiary);
  text-decoration: underline;
}

.sxih33v:active {
  color: var(--sx-colors-primary);
}

.sxjb6b1 > .sxih33v,
.sxyi5a5 > .sxih33v,
.sx03kze > .sxih33v {
  font-size: 100%;
  line-height: 1;
}

.sxjb6b1 > .sxih33v::before,
.sxjb6b1 > .sxih33v::after,
.sxyi5a5 > .sxih33v::before,
.sxyi5a5 > .sxih33v::after,
.sx03kze > .sxih33v::before,
.sx03kze > .sxih33v::after {
  content: none;
}

.sxih33vryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxih33vryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxih33vryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

<div>
  <a
    class="sxih33v sxih33vryo8u--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sxih33v {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sxih33v:focus,
.sxih33v:hover {
  color: var(--sx-colors-tertiary);
  text-decoration: underline;
}

.sxih33v:active {
  color: var(--sx-colors-primary);
}

.sxjb6b1 > .sxih33v,
.sxyi5a5 > .sxih33v,
.sx03kze > .sxih33v {
  font-size: 100%;
  line-height: 1;
}

.sxjb6b1 > .sxih33v::before,
.sxjb6b1 > .sxih33v::after,
.sxyi5a5 > .sxih33v::before,
.sxyi5a5 > .sxih33v::after,
.sx03kze > .sxih33v::before,
.sx03kze > .sxih33v::after {
  content: none;
}

.sxih33vryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxih33vryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxih33vryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxih33vg0h8h--size-lg {
  font-size: var(--sx-fontSizes-lg);
  line-height: 1.52;
}

.sxih33vg0h8h--size-lg::before {
  content: '';
  margin-bottom: -0.3983em;
  display: table;
}

.sxih33vg0h8h--size-lg::after {
  content: '';
  margin-top: -0.3983em;
  display: table;
}

<div>
  <a
    class="sxih33v sxih33vg0h8h--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
